syntax = "proto3";

package api;

import "error.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  responses: {
    key: "default";
    value: {
      schema: {
        json_schema: {
          ref: ".api.Status";
        }
      }
    }
  }
};

service JobService {
  rpc GetJob(GetJobRequest) returns (JobDetail) {
    option (google.api.http) = {
      get: "/apis/v1alpha2/pipelines/{pipeline_id}/jobs/{job_id}"
    };
  }

  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {
    option (google.api.http) = {
      get: "/apis/v1alpha2/pipelines/{pipeline_id}/jobs"
    };
  }
}

message GetJobRequest {
  string pipeline_id = 1;
  string job_id = 2;
}

message ListJobsRequest {
  string pipeline_id = 1;
  string page_token = 2;
  int32 page_size = 3;
  string sort_by = 4;
}

message ListJobsResponse {
  repeated Job jobs = 1;
  string next_page_token = 2;
}

message Job {
  string id = 1;
  string name = 2;
  string namespace = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp scheduled_at = 5;
  string status = 6;
}

message JobDetail {
  Job job = 1;
  string workflow = 2;
}